* Changes up to version 3.1

** Server

The 'gap' directive will no longer work.  It could be restored if there
is real demand.

*** Random Track Choice

This has been completely rewritten to support new features:
   - tracks in the recently-played list or in the queue are no longer
     eligible for random choice
   - there is a new configuration item replay_min defining the minimum
     time before a played track can be picked at random.  The default is
     8 hours (which matches the earlier behaviour).

* Changes up to version 3.0

Important!  See README.upgrades when upgrading.

** Platforms And Installation

Mac OS X and FreeBSD are somewhat supported.  There is now a bash script
in scripts/setup which will automate the setup after 'make install'.

** Server

Users are now stored in the database rather than a configuration file.

The server now has a built-in list of stopwords and players, so only
additions to these need be mentioned in the configuration file.

The default inter-track gap is now 0s.

How sound is played is now controlled via the new 'api' configuration
command.  This also controls how the volume is set, which now works with
ALSA as well as OSS.

A bug in the MP3 decoder was fixed (also in 2.0.4).

** Web Interface

The web interface now uses cookies to remember user identity, and allows
online registration of new users.  Also it is no longer necessary to
manually specify the URL of the web interface (but you can override it
if you don't like the value it figures out).

It is possible to allow users to register via the web interface.

The web interface's browser support has been improved.  It has been
tested with Firefox 2, Safari 3, Konqueror 3, Internet Explorer 7 and
Opera 9.

** Disobedience

A bug which would cause a crash if you attempt to rearrange the queue
while no track was playing has been fixed.  There is a new 'deselect all
tracks' option, mirroring 'select all tracks.

* Changes up to version 2.0

** General
